--- a/jmcMemo/Base.lproj/Main.storyboard
+++ b/jmcMemo/Base.lproj/Main.storyboard
@@ -71,26 +71,79 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s0K-Jj-6A1">
-                                <rect key="frame" x="0.0" y="818" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s0K-Jj-6A1">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <items/>
                             </toolbar>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ee1-fr-xjf">
-                                <rect key="frame" x="20" y="818" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Lzr-vS-wYj">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="memoCell" textLabel="GIm-ul-ZZE" style="IBUITableViewCellStyleDefault" id="joE-az-OD9">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="joE-az-OD9" id="0SW-3V-gLP">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GIm-ul-ZZE">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="dateCell" textLabel="6LC-ba-Jaj" style="IBUITableViewCellStyleDefault" id="EOW-0F-TNB">
+                                        <rect key="frame" x="0.0" y="68" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="EOW-0F-TNB" id="cub-a5-pBC">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6LC-ba-Jaj">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="U1h-X8-pLa" id="tqU-iB-oqK"/>
+                                </connections>
+                            </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ee1-fr-xjf">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <items>
                                     <barButtonItem title="Item" id="GRW-Sw-2Yo"/>
                                 </items>
                             </toolbar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Lzr-vS-wYj">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0Jm-VI-Pp0"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ee1-fr-xjf" firstAttribute="bottom" secondItem="0Jm-VI-Pp0" secondAttribute="bottom" id="0W4-Cj-NT3"/>
+                            <constraint firstItem="Ee1-fr-xjf" firstAttribute="top" secondItem="Lzr-vS-wYj" secondAttribute="bottom" id="CK6-xG-v3Y"/>
+                            <constraint firstItem="Lzr-vS-wYj" firstAttribute="top" secondItem="76s-bs-WGT" secondAttribute="top" id="EEQ-7J-wCA"/>
+                            <constraint firstItem="Lzr-vS-wYj" firstAttribute="top" secondItem="76s-bs-WGT" secondAttribute="top" id="Go0-C6-TLu"/>
+                            <constraint firstItem="s0K-Jj-6A1" firstAttribute="top" secondItem="Lzr-vS-wYj" secondAttribute="bottom" id="K7p-cQ-zEx"/>
+                            <constraint firstItem="Ee1-fr-xjf" firstAttribute="leading" secondItem="0Jm-VI-Pp0" secondAttribute="leading" id="OpV-Oa-DWA"/>
+                            <constraint firstItem="Lzr-vS-wYj" firstAttribute="trailing" secondItem="0Jm-VI-Pp0" secondAttribute="trailing" id="WZR-Af-0MQ"/>
+                            <constraint firstItem="s0K-Jj-6A1" firstAttribute="top" secondItem="Lzr-vS-wYj" secondAttribute="bottom" id="X4n-Cs-4uU"/>
+                            <constraint firstItem="Ee1-fr-xjf" firstAttribute="trailing" secondItem="0Jm-VI-Pp0" secondAttribute="trailing" id="X85-S6-lxB"/>
+                            <constraint firstItem="Lzr-vS-wYj" firstAttribute="leading" secondItem="0Jm-VI-Pp0" secondAttribute="leading" id="a5F-TS-nlJ"/>
+                            <constraint firstItem="Lzr-vS-wYj" firstAttribute="trailing" secondItem="0Jm-VI-Pp0" secondAttribute="trailing" id="cKL-8U-oM8"/>
+                            <constraint firstItem="Lzr-vS-wYj" firstAttribute="trailing" secondItem="0Jm-VI-Pp0" secondAttribute="trailing" id="cLn-sL-Tky"/>
+                            <constraint firstItem="Lzr-vS-wYj" firstAttribute="leading" secondItem="0Jm-VI-Pp0" secondAttribute="leading" id="dXr-DF-do8"/>
+                            <constraint firstItem="Lzr-vS-wYj" firstAttribute="top" secondItem="76s-bs-WGT" secondAttribute="top" id="odI-3b-TrF"/>
+                            <constraint firstItem="Lzr-vS-wYj" firstAttribute="leading" secondItem="0Jm-VI-Pp0" secondAttribute="leading" id="szL-SM-cvc"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="vgQ-nu-HSr"/>
                 </viewController>
